# learning

./: .gitignore  decorators.ipynb  interpretable_decision_trees.ipynb  itertools_module.ipynb  logging.ipynb  logit_motivation.ipynb  matplotlib_library.ipynb  os.ipynb  pathlib_explore.ipynb  pyproject.toml  random.ipynb  recursion.ipynb  scrapy.ipynb
DEL-py-autogui/: autoFold.py  auto_poker.py  position.txt  pyautogui.ipynb
SQLite/: sqllite-demo.py
explore/: OOP.ipynb  boto3_.ipynb  collections_module.ipynb  decorators.ipynb  error_and_exceptions.ipynb  json.ipynb  logit_motivation.ipynb  pyproject.toml  regression splines.ipynb  riemann_integral.ipynb  scipy_explore.py
explore/.history/: pyproject_20220327120125.toml  pyproject_20220327120341.toml  pyproject_20220327120342.toml  pyproject_20220327120344.toml  pyproject_20220327120349.toml  pyproject_20220327120436.toml  pyproject_20220327120705.toml
explore/SQLite/: employee.db
py-autogui/: pyautogui.ipynb
