[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Ezra Citron <ezracitron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
ipykernel = "^6.25.2"
pillow = "^10.0.0"
pytesseract = "^0.3.10"
opencv-python = "^4.8.0.76"
numpy = "^1.25.2"
matplotlib = "^3.7.3"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
