[tool.poetry]
name = "explore"
version = "0.1.0"
description = ""
authors = ["Ezra Citron <ezracitron@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.0"
pandas = "^1.4.1"
numpy = "^1.22.3"
plotnine = "^0.8.0"
ipykernel = "^6.9.2"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
